# github-actions-demo

./: .pre-commit-config.yaml  .tmux.yaml  Makefile  README.md  pyproject.toml  requirements.txt  run.sh
.github/workflows/: example-workflow.yml  py_flake8.yml  python-app.yml
github_actions_demo/: numpy_op.py
tests/: test_numpy_op.py
